Issue #2 fixed and added 'Fetch URL Time' feature

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
       <br><br>
     </div>
     <div id="totalFetchedLinks"><br>&nbsp
-      <span>Total URL's fetched:</span><span id="totalLinks">&nbsp0&nbsp<i>links</i></span>
+    <span>
+        <span>Total URL's fetched:</span>
+        <span id="totalLinks">&nbsp0&nbsp<i>links</i></span> 
+    </span>
+      <span id="fetchTime">Fetch time: 0ms</span>
       <span id="requestStatus">
       Request status code = NIL
       </span><br><br>
