Changed 'totalFetchedLinks' id alignment
Changed 'totalFetchedLinks' id to 'row by column' implementation

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       </span>
       <br><br>
     </div>
-    <div id="totalFetchedLinks"><br>&nbsp
-    <span>
-        <span>Total URL's fetched:</span>
-        <span id="totalLinks">&nbsp0&nbsp<i>links</i></span> 
-    </span>
-      <span id="fetchTime">Fetch time: 0ms</span>
-      <span id="requestStatus">
+    <div class="row" id="totalFetchedLinks"><br>&nbsp
+      <span class="column">
+          <span>Total URL's fetched:</span>
+          <span id="totalLinks">&nbsp0&nbsp<i>links</i></span> 
+      </span>
+      <span class="column" id="fetchTime">Fetch time: 0ms</span>
+      <span class="column" id="requestStatus">
       Request status code = NIL
       </span><br><br>
     </div>
