It can access all the URLs from Bitly API

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         </header>
       </center>  
       <div>
-        <input type="radio" name="fetchOption" id="radio1">links.json
-        <input type="radio" name="fetchOption" id="radio2" checked>testfile.json &nbsp
+        <input type="radio" name="fetchOption" id="radio1">Links.json
+        <input type="radio" name="fetchOption" id="radio2" checked>Test-file.json 
+        <input type="radio" name="fetchOption" id="radio3"> Myjson-API
+        <input type="radio" name="fetchOption" id="radio4"> Bitly-API &nbsp
         <input type="button" id="fetchurl" value="Fetch URL" onclick="fetchurl()">        
       </div>
       <br><hr>
@@ -52,6 +54,9 @@
     <br>
     <div id="displayFetchedUrls"> 
     </div>
+    <p id="p">
+      
+    </p>
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
