--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <br><hr><br>
     <center>
-      <input type="button" id="toggleMatchedAll" value="Matched Only" onclick="displayMatchedURLs()">
+      <input type="button" id="toggleMatchedAll" value="Matched Only" onclick="toggleURLDisplayButton()">
     </center>
     <br>
     <div id="displayFetchedUrls"> 
