Included the 'loader' class

--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       <input type="button" id="toggleMatchedAll" value="Matched Only" onclick="toggleURLDisplayButton()">
     </center>
     <br>
+    <div id="loader">
+      
+    </div>
     <div id="displayFetchedUrls"> 
     </div>
-    <p id="p">
-      
-    </p>
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
