'Back to Top' button and searchurl() comments

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     
     <!-- import the webpage's javascript file -->
     <script src="/script.js" defer></script>
+    <!-- import the jQuery language -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   </head>  
   <body>
     <div class="headercolor">
@@ -61,5 +63,6 @@
           to make it easier for folks to view source and remix -->
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
     <script src="https://button.glitch.me/button.js"></script>
+    <a id="back2Top" title="Back to top" href="#">&#10148;</a> 
   </body>
 </html>
