🌚🤑 Added snackbar and updated url display

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
     </div>
     <div id="displayFetchedUrls"> 
     </div>
+    <div id="matchurlcountsnackbar">
+      
+    </div>
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
     <div class="glitchButton" style="position:fixed;top:20px;right:20px;"></div>
