--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <br>&nbsp
       <span>
         <label>Search URL's: </label>
-        <input type="text" placeholder="bit.ly" onkeyup="searchurl(this.value)"> 
+        <input type="text" placeholder="bit.ly" id="input" onkeypress="triggerSearch(event)">
       </span>
       <br><br>
     </div>
